<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="ok">OK</string>
    <string name="cancel">キャンセル</string>
    <string name="maybe">もしかして…</string>
    <string name="app_name">降りつぶしroid</string>
    <string name="preferences">設定</string>
    <string name="operator_type">事業者別</string>
    <string name="pref">都道府県</string>
    <string name="yomi">読み</string>
    <string name="comp_date">乗下車日</string>
    <string name="info">お知らせ</string>
    <string name="sync">同期</string>
    <string name="other">その他</string>
    <string name="verbose_title">降りつぶしroid - 駅情報</string>
    <string name="preferences_title">降りつぶしroid - 設定</string>
    <string name="operator_type_title">降りつぶしroid - 事業者・路線別</string>
    <string name="pref_title">降りつぶしroid - 都道府県別</string>
    <string name="yomi_title">降りつぶしroid - 読み</string>
    <string name="comp_date_title">降りつぶしroid - 乗下車日</string>
    <string name="info_title">降りつぶしroid - お知らせ</string>
    <string name="sync_title">降りつぶしroid - 同期</string>
    <string name="database_cannot_open">データベースを開けません</string>
    <string name="map">地図</string>
    <string name="mapbutton_map">地図</string>
    <string name="mapbutton_satellite">衛星</string>
    <string name="mapbutton_hybrid">複合</string>
    <string name="mapbutton_list">一覧</string>
    <string name="mapbutton_all">全駅</string>
    <string name="mapbutton_comp">済</string>
    <string name="mapbutton_incomp">未</string>
    <string name="notification_database_initializing">駅データベース初期化中(%d%%)</string>
    <string name="notification_database_initialized">駅データベースを初期化しました</string>
    <string name="map_wrapper_waiting">初期化中…</string>
    <string name="map_disabled">Google Play Servicesが起動していないかまたは最新版でないため、地図の表示ができません。</string>
    <string name="verbose_header_date">乗下車日</string>
    <string name="verbose_header_memo">メモ</string>
    <string name="verbose_header_misc">操作</string>
    <string name="verbose_header_advanced">データ最終更新日時</string>
    <string name="verbose_button_edit_date">変更</string>
    <string name="verbose_button_comp_today">今日</string>
    <string name="verbose_button_edit_memo">編集</string>
    <string name="verbose_button_wikipedia">この駅をウィキペディアで調べる</string>
    <string name="verbose_button_move_to">この駅を地図の中心にする</string>
    <string name="verbose_edit_comp_date_title_loading">乗下車日</string>
    <string name="verbose_edit_comp_date_title">%sの乗下車日</string>
    <string name="verbose_edit_memo_title_loading">メモ</string>
    <string name="verbose_edit_memo_title">%sのメモ</string>
    <string name="comp_date_edit_0year">日付不明</string>
    <string name="comp_date_edit_0month">月日不明</string>
    <string name="comp_date_edit_0day">日不明</string>
    <string name="search_type_location">地点</string>
    <string name="search_type_pref">県</string>
    <string name="search_type_name">駅名</string>
    <string name="search_type_yomi">読み</string>
    <string name="search_type_line">路線</string>
    <string name="search_type_date">日付</string>
    <string name="search_cond_start">始まる</string>
    <string name="search_cond_contain">含む</string>
    <string name="search_zero_results_format">地点“%s”は見当たりません</string>
    <string name="search_request_denied">地点検索回数が制限を超えました</string>
    <string name="search_network_error">ネットワークエラーのため地点検索できません</string>
    <string name="search_fatal_error">地点検索できません</string>
    <string name="list_button_map_filter">地図選択</string>
    <string name="sync_preparing">同期データ準備中</string>
    <string name="sync_server">降りつぶし.netサーバと通信中</string>
    <string name="sync_database">データベース更新中</string>
    <string name="sync_finished">降りつぶし.netサーバと同期しました</string>
    <string name="sync_button_clear_recent_date">クリア</string>
    <string name="sync_button_start">同期を開始する</string>
    <string name="sync_doing">同期を実行中…</string>
    <string name="sync_button_login_initializing">−−−−</string>
    <string name="sync_button_login">ログイン</string>
    <string name="sync_button_retry_login">再ロード</string>
    <string name="sync_button_logout">ログアウト</string>
    <string name="sync_busy">同期は既に実行中です</string>
    <string name="sync_not_ready">データベース初期化中です</string>
    <string name="sync_done">降りつぶし.netと同期しました</string>
    <string name="sync_cancelled">同期はキャンセルされました</string>
    <string name="sync_io_error">一時ファイルの読み書きでエラーが発生しました</string>
    <string name="sync_network_error">ネットワークエラーが発生しました</string>
    <string name="sync_error">同期中にエラーが発生しました</string>
    <string name="sync_logout">ログアウトしました</string>
    <string name="sync_login_failed">ログインに失敗しました</string>
    <string name="sync_twitter_logout">Twitter認証がキャンセルされました</string>
    <string name="sync_ready">降りつぶし.netと同期します</string>
    <string name="sync_date_format">%1$d/%2$d/%3$d %4$02d:%5$02d</string>
    <string name="sync_date_none">なし</string>
    <string name="sync_recent_date">前回同期日時</string>
    <string name="sync_login_user_name">ログインユーザ名</string>
    <string name="sync_test_auth">確認中…</string>
    <string name="sync_not_login">ログインしていません</string>
    <string name="sync_unknown_login">(状態不明)</string>
    <string name="sync_do">同期の実行</string>
    <string name="sync_abort_message">同期を中止しますか？</string>
    <string name="sync_abort_ok">中止する</string>
    <string name="sync_abort_cancel">続行する</string>
    <string name="information_load_error">お知らせが読み込めませんでした</string>
    <string name="drawer_open_desc">メニューを開きます</string>
    <string name="drawer_close_desc">メニューを閉じます</string>
</resources>
