<?xml version="1.0" encoding="utf-8"?>
<FrameLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:wsf="http://schemas.android.com/apk/res/com.wsf_lp.oritsubushi"
  android:id="@+id/panel_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <WebView
        android:id="@+id/web_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="invisible" />

    <ScrollView
        android:id="@+id/container"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:fillViewport="true" >

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:orientation="vertical" >

            <FrameLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="#444" >

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|center_horizontal"
                    android:layout_margin="8dp"
                    android:gravity="left|center_vertical"
                    android:padding="4sp"
                    android:text="@string/sync_recent_date"
                    android:textSize="16sp" />
            </FrameLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8sp" >

                <Button
                    android:id="@+id/button_clear_recent_date"
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:minHeight="30dp"
                    android:text="@string/sync_button_clear_recent_date" />

                <TextView
                    android:id="@+id/sync_recent_date"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:layout_margin="8dp"
                    android:layout_toLeftOf="@+id/button_clear_recent_date"
                    android:gravity="left|center_vertical"
                    android:text="@string/sync_date_none"
                    android:textSize="22sp" />
            </RelativeLayout>

            <FrameLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="#444" >

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|center_horizontal"
                    android:layout_margin="8dp"
                    android:gravity="left|center_vertical"
                    android:padding="4sp"
                    android:text="@string/sync_login_user_name"
                    android:textSize="16sp" />
            </FrameLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8sp" >

                <Button
                    android:id="@+id/button_logout"
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:minHeight="30dp"
                    android:text="@string/sync_button_logout" />

                <com.wsf_lp.oritsubushi.customs.FontFitTextView
                    android:id="@+id/sync_login_user"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:layout_margin="8dp"
                    android:layout_toLeftOf="@id/button_logout"
                    android:gravity="left|center_vertical"
                    android:textSize="24sp"
                    wsf:minTextSize="12sp" />
            </RelativeLayout>

            <FrameLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="#444" >

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|center_horizontal"
                    android:layout_margin="8dp"
                    android:gravity="left|center_vertical"
                    android:padding="4sp"
                    android:text="@string/sync_do"
                    android:textSize="16sp" />
            </FrameLayout>

            <FrameLayout
                android:id="@+id/FrameLayout2"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_gravity="center_vertical|center_horizontal"
                android:layout_weight="1" >

                <Button
                    android:id="@+id/button_start_sync"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top|center_horizontal"
                    android:layout_margin="32sp"
                    android:minHeight="30dp"
                    android:text="@string/sync_button_start" />

            </FrameLayout>
        </LinearLayout>

    </ScrollView>

    <FrameLayout
        android:id="@+id/progress"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#a444" >

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:visibility="visible" />

    </FrameLayout>

</FrameLayout>
